CORE-10407: Initial changes for Java 17 support.